hack: corrupted dependency
DO NOT MERGE!!!! NEVER!!!
Intentionally corrupted pom.xml to test partial compilation.